RESOLVED FIXED61027
WebKit2: fix failing fullscreen/full-screen-remove* tests.
https://bugs.webkit.org/show_bug.cgi?id=61027
Summary WebKit2: fix failing fullscreen/full-screen-remove* tests.
Jer Noble
Reported 2011-05-18 00:43:52 PDT
WebKit2: fix failing fullscreen/full-screen-remove* tests.
Attachments
Patch (5.29 KB, patch)
2011-05-18 01:15 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2011-05-18 01:15:40 PDT
Jer Noble
Comment 2 2011-05-18 01:16:26 PDT
WebKit Commit Bot
Comment 3 2011-05-21 15:30:14 PDT
Comment on attachment 93883 [details] Patch Clearing flags on attachment: 93883 Committed r87022: <http://trac.webkit.org/changeset/87022>
WebKit Commit Bot
Comment 4 2011-05-21 15:30:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.